clusters/cluster0/kubernetes/apps/git-system/gitea/app/gitea-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gitea 
  namespace: git-system
spec:
  hostnames:
  - git.gregbob.net
  parentRefs:
  - name: wildcard-gregbob-net
    namespace: network
  rules:
  - backendRefs:
    - name: gitea-http
      port: 3000
    matches:
    - path:
        type: PathPrefix
        value: /
